@@ -4,7 +4,7 @@
 	},
 	"content_scripts": [
 		{
-			"matches": ["*://*.bizjournals.com/*"],
+			"matches": ["*://*.bizjournals.com/*", "*://*.businessinsider.com/*"],
 			"js": ["contentScript.js"]
 		}
 	],
@@ -43,5 +43,5 @@
 		"webRequest",
 		"webRequestBlocking"
 	],
-	"version": "1.3.0"
+	"version": "1.3.1"
 }
